# aixcript-hackathon-server

./: .env.sample  .gitignore  Dockerfile  LICENCE  README.md  compose.yaml  foundry.toml  pyproject.toml  remappings.txt
app/: config.py  main.py
app/facades/chatgpt/: __init__.py  create_titie.py  create_title.py  models.py
app/facades/database/: __init__.py  dataset_store.py  user_store.py
app/facades/storage/: __init__.py  image_file_storage.py  zipfile_storage.py
app/facades/vision_ai/: __init__.py  models.py  web_detection.py
app/facades/web3/: __init__.py  account.py
app/facades/web3/smart_contracts/: ReversibleFT.py  base.py
app/master/dataset/: dataset_router.py
app/master/dataset/models/: domain.py  entry_dataset.py  list_dataset.py  purchase_dataset.py
app/master/dataset/services/: download_dataset_thumbnail_service.py  entry_dataset_service.py  list_dataset_service.py  purchase_dataset_service.py
app/master/download/: download_router.py
app/master/download/services/: download_service.py
app/master/user/: user_router.py
app/master/user/models/: detail_user.py  domain.py  entry_user.py
app/master/user/services/: detail_user_by_wallet_address_service.py  entry_user_service.py  fetch_user_service.py
app/master/validate/: validate_router.py
app/master/validate/models/: domain.py  validate_request.py
contract/script/: ReversibleFT.s.sol
contract/src/: ReversibleFT.sol
contract/test/: ReversibleFT.sol
tests/: test_dataset.py  test_download.py  test_entry_dataset.py  test_user.py  test_validate.py
(+1 files in other folders)
